# GGML-Tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: common.cmake
demo/: CMakeLists.txt
demo/demo-sgemm/: README.md
demo/demo-split_graph/: CMakeLists.txt  README.md
doc/: Core-Concepts.md
src/: CMakeLists.txt  custom-model.cpp  custom-model.h
src/demo-sgemm/: CMakeLists.txt  README.md  simple-sgemm.cpp
src/demo-split_graph/: CMakeLists.txt  README.md  split_graph.cpp
